flexsdk/modules/asc/test/compiler/as3/Definitions/Packages/PackageDefNamespaceErr.err

[Compiler] Error #1083: Syntax error: package is unexpected.
as3.Definitions.Packages.PackageDefNamespaceErr.as, Ln 25, Col 1:
package foo {}
^

1 error found
